all pages mobile

--- a/src/assets/sass/app.sass
+++ b/src/assets/sass/app.sass
@@ -27,7 +27,7 @@ html, body
     
 // Fonts Helpers
 .font-sans
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', sans-serif
 
 .font-light
     font-weight: 300
