--- a/src/assets/sass/variables.sass
+++ b/src/assets/sass/variables.sass
@@ -2,3 +2,21 @@
 $black: #000000
 $white: #ffffff
 $lightGray: #F5F5F5
+
+@mixin font-sans
+    font-family: 'Inter', sans-serif
+
+@mixin font-light
+    font-weight: 300
+
+@mixin font-regular
+    font-weight: 400
+
+@mixin font-medium
+    font-weight: 500
+
+@mixin font-bold
+    font-weight: 600
+
+@mixin font-black
+    font-weight: 700
