--- a/src/assets/sass/app.sass
+++ b/src/assets/sass/app.sass
@@ -48,3 +48,8 @@ html, body
 .pd-lr
     padding-left: 28px
     padding-right: 28px
+
+@media (min-width: 660px)
+    .pd-lr
+        padding-left: 32px
+        padding-right: 32px
