--- a/src/assets/sass/presentation.sass
+++ b/src/assets/sass/presentation.sass
@@ -22,11 +22,13 @@
             line-height: 130%
             font-weight: 400
             margin-bottom: 60px
+            max-width: 390px
     .indexDescription
         order: 3
         width: 95%
         margin-bottom: 92px
         p
+            max-width: 400px
             line-height: 150%
             font-size: 15px
             letter-spacing: -0.01em
@@ -35,8 +37,9 @@
             &:last-child
                 margin-bottom: 0
         a
+            // font-size: 15px
             color: $black
-            font-weight: 600
+            @include font-medium
     .imagePresentation
         order: 2
         width: 100%
@@ -52,3 +55,20 @@
             font-size: 13px
             color: rgba($black, 0.5)
             letter-spacing: -0.01em
+            a
+                color: rgba($black, 0.7)
+
+@media (min-width: 660px)
+    .hero
+        .presentationTitle
+            h5
+            h1
+                font-size: 42px
+                max-width: 480px
+        .indexDescription
+            p
+            a
+        .imagePresentation
+            .img
+            figcaption
+                a
