--- a/src/assets/sass/header.sass
+++ b/src/assets/sass/header.sass
@@ -113,4 +113,39 @@ header
             right: 0
             ul
                 a
-                    color: $white
+                        color: $white
+        
+@media (min-width: 660px)
+    header
+        .branding
+            a
+        .hamburger
+            .hamburger-box-a,
+            .hamburger-box-b
+            .hamburger-box-a
+            .hamburger-box-b
+            &:hover
+            &.active
+                .hamburger-box-a
+                .hamburger-box-b
+        .navigation
+            padding:
+                left: 32px
+                right: 32px
+            ul
+                a
+                    &:hover
+                    &:nth-child(1)
+                    &:nth-child(2)
+                    &:nth-child(3)
+                    &:nth-child(4)
+                    &:last-child
+        &.active
+            .branding
+                a
+            .hamburger
+                .hamburger-box-a,
+                .hamburger-box-b
+            .navigation
+                ul
+                    a
