--- a/src/assets/sass/profile.sass
+++ b/src/assets/sass/profile.sass
@@ -6,17 +6,18 @@
     .profileHeader
         margin: 
             bottom: 88px
-        .profileImage
-            width: 100%
-            height: 0
-            padding:
-                top: 385 / 319 * 100%
-            background-color: $lightGray
-            background-size: cover
-            background-position: center
-            background-repeat: no-repeat
-            margin: 
-                bottom: 22px
+        .profileImages
+            .profileImage
+                width: 100%
+                height: 0
+                padding:
+                    top: 385 / 319 * 100%
+                background-color: $lightGray
+                background-size: cover
+                background-position: center
+                background-repeat: no-repeat
+                margin: 
+                    bottom: 22px
         .profileDesc
             margin-top: 74px
             h5
@@ -31,6 +32,7 @@
                 font-size: 38px
                 letter-spacing: -0.02em
                 line-height: 125%
+                max-width: 390px
                 margin:
                     bottom: 33px
             .theDesc
@@ -39,7 +41,8 @@
                     font-size: 20px
                     letter-spacing: -0.02em
                     line-height: 150%
-                    max-width: 96%
+                    // max-width: 96%
+                    max-width: 420px
                     margin:
                         bottom: 28px
                     &:last-child
@@ -59,6 +62,7 @@
             letter-spacing: -0.02em
             @include font-bold
             margin-bottom: 42px
+            max-width: 390px
         .items
             .item
                 background-color: $lightGray
@@ -90,3 +94,44 @@
                     font-size: 15px
                     letter-spacing: -0.01em
                     line-height: 150%
+
+@media (min-width: 660px)
+    .profile
+        .profileHeader
+            margin: 
+                bottom: 100px
+            .profileImages
+                display: flex
+                justify-content: space-between
+                flex-wrap: wrap
+                .profileImage
+                    width: 48.5%
+                    padding:
+                        top: 185 / 319 * 100%
+            .profileDesc
+                h5
+                h1
+                    max-width: 480px
+                .theDesc
+                    h4
+                        max-width: 480px
+                        &:last-child
+                        a
+        .profileItems
+            h2
+                max-width: 480px
+            .items
+                width: 100%
+                display: flex
+                flex-wrap: wrap
+                justify-content: space-between
+                .item
+                    width: 48.5%
+                    display: flex
+                    flex-wrap: wrap
+                    align-items: flex-end
+                    box-sizing: border-box
+                    &:last-child
+                    h5
+                    h4
+                    p
