--- a/src/assets/sass/app.sass
+++ b/src/assets/sass/app.sass
@@ -53,3 +53,13 @@ html, body
     .pd-lr
         padding-left: 32px
         padding-right: 32px
+
+@media (min-width: 900px)
+    .pd-lr
+        padding-left: 40px
+        padding-right: 40px
+
+@media (min-width: 1100px)
+    .pd-lr
+        padding-left: 60px
+        padding-right: 60px
