--- a/src/assets/sass/portfolioGrid.sass
+++ b/src/assets/sass/portfolioGrid.sass
@@ -31,3 +31,38 @@
                 letter-spacing: -0.01em
         &:first-child
             margin-top: 0
+
+@media (min-width: 660px)
+    .portfolioGrid
+        justify-content: space-between
+        margin:
+            bottom: 24px
+        .item
+            width: 48.5%
+            margin-top: 0
+            margin-bottom: 50px
+            a.img
+            .data
+                a
+                    h4
+                p
+            &:first-child
+
+@media (min-width: 1100px)
+    .portfolioGrid
+        // justify-content: space-between
+        // margin:
+        //     bottom: 24px
+        .item
+            // width: 48.5%
+            // margin-top: 0
+            margin-bottom: 62px
+            a.img
+            .data
+                a
+                    h4
+                        font-size: 16px
+                        margin-bottom: 12px
+                p
+                    font-size: 16px
+            &:first-child
