--- a/src/assets/sass/profile.sass
+++ b/src/assets/sass/profile.sass
@@ -135,3 +135,45 @@
                     h5
                     h4
                     p
+
+@media (min-width: 900px)
+    .profile
+        padding:
+            top: 128px
+        .profileHeader
+            margin: 
+                bottom: 82px
+            display: flex
+            justify-content: space-between
+            .profileImages
+                // width: 35%
+                width: 38%
+                .profileImage
+                    width: 100%
+                    padding:
+                        top: 504 / 418 * 100%
+                        top: 480 / 418 * 100%
+            .profileDesc
+                // width: 65%
+                width: 55%
+                margin-top: 82px
+                h5
+                h1
+                    // max-width: 100%
+                    max-width: 86%
+                .theDesc
+                    max-width: 86%
+                    h4
+                        max-width: 100%
+                        &:last-child
+                        a
+        .profileItems
+            h2
+            .items
+                .item
+                    width: 32%
+                    margin-bottom: 20px
+                    &:last-child
+                    h5
+                    h4
+                    p
