--- a/src/assets/sass/profile.sass
+++ b/src/assets/sass/profile.sass
@@ -131,6 +131,8 @@
                     flex-wrap: wrap
                     align-items: flex-end
                     box-sizing: border-box
+                    align-items: flex-start
+                    align-content: flex-start
                     &:last-child
                     h5
                     h4
@@ -177,3 +179,67 @@
                     h5
                     h4
                     p
+
+@media (min-width: 1100px)
+    .profile
+        padding:
+            top: 131px
+        .profileHeader
+            margin: 
+                bottom: 108px
+            // display: flex
+            // justify-content: space-between
+            .profileImages
+                // width: 35%
+                width: 35.5%
+                .profileImage
+                    // width: 100%
+                    // padding:
+                    //     top: 504 / 418 * 100%
+                    //     top: 480 / 418 * 100%
+            .profileDesc
+                // width: 65%
+                width: 56.8%
+                margin-top: 82px
+                margin-top: 104px
+                h5
+                    font-size: 16px
+                    margin:
+                        bottom: 33px
+                h1
+                    // max-width: 100%
+                    // max-width: 86%
+                    font-size: 54px
+                    line-height: 120%
+                    margin:
+                        bottom: 41px
+                .theDesc
+                    // max-width: 86%
+                    h4
+                        // max-width: 100%
+                        font-size: 24px
+                        line-height: 150%
+                        &:last-child
+                        a
+        .profileItems
+            h2
+                font-size: 46px
+                line-height: 120%
+                margin-bottom: 48px
+            .items
+                margin-bottom: 56px
+                .item
+                    width: 31.7%
+                    margin-bottom: 26px
+                    padding: 
+                        top: 48px
+                        right: 42px
+                        bottom: 50px
+                        left: 38px
+                    &:last-child
+                    h5
+                    h4
+                        font-size: 24px
+                    p
+                        font-size: 16px
+                        // line/
