--- a/src/assets/sass/work.sass
+++ b/src/assets/sass/work.sass
@@ -130,17 +130,41 @@
 
 @media (min-width: 1100px)
     .work
+        padding:
+            top: 131px
         .workImage
+            margin:
+                bottom: 160px
         .workHeader
+            margin:
+                bottom: 116px
             .headerDescription
                 h5
+                    font-size: 16px
+                    margin:
+                        bottom: 34px
                 h2
+                    font-size: 46px
+                    line-height: 120%
+                    max-width: 80%
+                    margin:
+                        bottom: 34px
                 .description
+                    margin: 
+                        bottom: 0
                     p
+                        font-size: 17px
+                        line-height: 160%
             .headerDetails
+                align-self: start
                 .item
+                    margin-bottom: 38px
                     h6
                     p
         .content
+            padding:
+                bottom: 52px
             img
+                margin:
+                    bottom: 31px
                 &:last-child
