--- a/src/assets/sass/footer.sass
+++ b/src/assets/sass/footer.sass
@@ -3,7 +3,7 @@
 footer
     padding:
         top: 54px
-        bottom: 48px
+        bottom: 36px
     background-color: $lightGray
     h1
         font-weight: 600
@@ -27,20 +27,25 @@ footer
                 letter-spacing: -0.01em
                 color: rgba($black, 0.8)
                 margin-bottom: 2px
+                margin-bottom: 4px
             a
                 letter-spacing: -0.01em
                 font-weight: 600
                 color: $black
     .credits
+        display: flex
+        justify-content: space-between
         p
             letter-spacing: -0.01em
             font-size: 14px
             line-height: 150%
-            color: rgba($black, 0.5)
+            color: rgba($black, 0.3)
                 // margin-bottom: 2px
         
 @media (min-width: 660px)
     footer
+        padding: 
+            bottom: 40px 
         h1
             font-size: 42px
             max-width: 480px
@@ -52,6 +57,47 @@ footer
                 p
                 a
         .credits
-            display: flex
-            justify-content: space-between
+            // display: flex
+            // justify-content: space-between
+            p
+        
+@media (min-width: 900px)
+    footer
+        padding: 
+            top: 62px
+            bottom: 42px
+        h1
+            font-size: 42px
+            // max-width: 480px
+        .contactOptions
+            // display: flex
+            width: 100%
+            div
+                width: 30%
+                p
+                a
+        .credits
+            // display: flex
+            // justify-content: space-between
+            p
+        
+@media (min-width: 1100px)
+    footer
+        padding: 
+            top: 76px
+        h1
+            font-size: 54px
+            margin-bottom: 54px
+            max-width: 520px
+        .contactOptions
+            // display: flex
+            // width: 480px
+            margin-bottom: 94px
+            div
+                // width: 50%
+                p
+                a
+        .credits
+            // display: flex
+            // justify-content: space-between
             p
