--- a/src/assets/sass/portfolioGrid.sass
+++ b/src/assets/sass/portfolioGrid.sass
@@ -12,7 +12,8 @@
             display: block
             width: 100%
             height: 0
-            padding-top: 223 / 319 * 100%
+            // padding-top: 223 / 319 * 100%
+            padding-top: 429 / 319 * 100%
             background-color: $lightGray
             background-position: center
             background-repeat: no-repeat
@@ -48,16 +49,41 @@
                 p
             &:first-child
 
-@media (min-width: 1100px)
+@media (min-width: 900px)
     .portfolioGrid
         // justify-content: space-between
         // margin:
         //     bottom: 24px
+        display: grid
+        grid-template-columns: repeat(3, 1fr)
+        grid-column-gap: 40px
+        .item
+            // width: 48.5%
+            // margin-top: 0
+            width: 100%
+            margin-bottom: 60px
+            a.img
+                padding-top: 450 / 353 * 100%
+            .data
+                a
+                    h4
+                        // font-size: 16px
+                        // margin-bottom: 12px
+                p
+                    // font-size: 16px
+            &:first-child
+
+@media (min-width: 1100px)
+    .portfolioGrid
+        // justify-content: space-between
+        margin:
+            bottom: 28px
         .item
             // width: 48.5%
             // margin-top: 0
             margin-bottom: 62px
             a.img
+                // width: 32%
             .data
                 a
                     h4
