--- a/src/assets/sass/presentation.sass
+++ b/src/assets/sass/presentation.sass
@@ -51,6 +51,9 @@
             // font-size: 15px
             color: $black
             @include font-medium
+            transition: all 0.3s cubic-bezier(0.45, 0, 0.55, 1)
+            &:hover
+                opacity: 0.7
     .imagePresentation
         order: 2
         width: 100%
@@ -74,8 +77,9 @@
         padding-top: 216px
         .presentationTitle
             h5
+                margin-bottom: 28px
             h1
-                font-size: 42px
+                font-size: 44px
                 max-width: 480px
         .indexDescription
             p
@@ -95,7 +99,7 @@
         margin:
             bottom: 110px
         &::after
-            height: 490px
+            height: 495px
         .presentationTitle
             grid-area: 1 / 1 / 2 / 4
             order: 1
@@ -104,7 +108,10 @@
             margin:
                 bottom: 0
             h5
+                // margin:
+                    // bottom: 28px
             h1
+                // font-size: 44px
                 margin-bottom: 92px
         .indexDescription
             grid-area: 2 / 1 / 3 / 4
@@ -121,7 +128,7 @@
             .img
                 // height: 92%
                 // height: 70%
-                height: 95%
+                height: 97%
                 // height: auto
                 // height: 500px
             figcaption
