--- a/src/assets/sass/footer.sass
+++ b/src/assets/sass/footer.sass
@@ -32,6 +32,11 @@ footer
                 letter-spacing: -0.01em
                 font-weight: 600
                 color: $black
+                opacity: 1
+                transition: all 0.3s cubic-bezier(0.45, 0, 0.55, 1)
+                &:hover,
+                &:focus
+                    opacity: 0.7
     .credits
         display: flex
         justify-content: space-between
