--- a/src/assets/sass/app.sass
+++ b/src/assets/sass/app.sass
@@ -63,3 +63,12 @@ html, body
     .pd-lr
         padding-left: 60px
         padding-right: 60px
+
+.changePage-enter
+    opacity: 0
+.changePage-enter-active
+    opacity: 1
+.changePage-exit
+    opacity: 1
+.changePage-exit-active
+    opacity: 1
