--- a/src/assets/sass/presentation.sass
+++ b/src/assets/sass/presentation.sass
@@ -136,10 +136,14 @@
 
 @media (min-width: 1100px)
     .hero
-        padding-top: 173px
+        padding-top: 166px
+        grid-column-gap: 44px
         &::after
-            height: 536px
+            height: 546px
+            height: 540px
         .presentationTitle
+            padding:
+                top: 78px
             h5
                 font-size: 16px
                 margin:
