--- a/src/assets/sass/footer.sass
+++ b/src/assets/sass/footer.sass
@@ -6,7 +6,7 @@ footer
         bottom: 36px
     background-color: $lightGray
     h1
-        font-weight: 600
+        @include font-bold
         font-size: 38px
         line-height: 130%
         line-height: 125%
@@ -22,7 +22,7 @@ footer
             margin-bottom: 28px
             p
                 font-size: 15px
-                font-weight: 400
+                @include font-regular
                 line-height: 150%
                 letter-spacing: -0.01em
                 color: rgba($black, 0.8)
@@ -30,7 +30,7 @@ footer
                 margin-bottom: 4px
             a
                 letter-spacing: -0.01em
-                font-weight: 600
+                @include font-bold
                 color: $black
                 opacity: 1
                 transition: all 0.3s cubic-bezier(0.45, 0, 0.55, 1)
