--- a/src/assets/sass/header.sass
+++ b/src/assets/sass/header.sass
@@ -1,6 +1,3 @@
-@mixin font-bold
-    font-weight: 600
-
 @import 'variables'
     
 @keyframes down
@@ -26,7 +23,7 @@ header
         position: relative
         z-index: 14
         a
-            font-weight: 600
+            @include font-bold
             font-size: 15px
             letter-spacing: -0.01em
             color: $black
@@ -89,7 +86,7 @@ header
             right: 24px
         ul
             a
-                font-weight: 500
+                @include font-medium
                 color: rgba($black, 0.8)
                 display: block
                 font-size: 38px
@@ -122,7 +119,7 @@ header
             right: 0
             ul
                 a
-                        color: $white
+                    color: $white
     &.fixed
         position: fixed
         z-index: 999
@@ -222,12 +219,16 @@ header
         &.active
             .branding
                 a
+                    color: $black
             .hamburger
                 .hamburger-box-a,
                 .hamburger-box-b
+                    background-color: transparent
             .navigation
+                right: auto
                 ul
                     a
+                        color: rgba($black, 0.8)
         &.fixed
             // padding: 
             //     top: 28px
