--- a/src/assets/sass/portfolioGrid.sass
+++ b/src/assets/sass/portfolioGrid.sass
@@ -28,19 +28,19 @@
                     margin-bottom: 10px
                     color: $black
                     font-size: 15px
-                    font-weight: 700
+                    @include font-black
                     opacity: 1
                     transition: all 0.3s cubic-bezier(0.45, 0, 0.55, 1)
             p
                 font-size: 15px
-                font-weight: 300
+                @include font-light
                 letter-spacing: -0.01em
         &:first-child
             margin-top: 0
         &:hover,
         &:active
             a.img
-                opacity: 0.7
+                opacity: 0.9
             .data
                 a
                     h4
