--- a/src/assets/sass/profile.sass
+++ b/src/assets/sass/profile.sass
@@ -112,6 +112,7 @@
                 h5
                 h1
                     max-width: 480px
+                    font-size: 48px
                 .theDesc
                     h4
                         max-width: 480px
