--- a/src/assets/sass/work.sass
+++ b/src/assets/sass/work.sass
@@ -12,6 +12,8 @@
         background-size: cover
         box-sizing: border-box
         margin:
+            left: auto
+            right: auto
             bottom: 55px
     .workHeader
         margin:
@@ -24,6 +26,7 @@
                 letter-spacing: -0.01em
                 margin:
                     bottom: 28px
+                    bottom: 30px
             h2
                 width: 95%
                 font-size: 32px
@@ -47,6 +50,7 @@
         .headerDetails
             .item
                 margin-bottom: 26px
+                margin-bottom: 32px
                 &:last-child
                     margin-bottom: 0
                 h6
@@ -77,13 +81,20 @@
             margin:
                 bottom: 100px
         .workHeader
+            margin:
+                bottom: 50px
             .headerDescription
                 h5
                 h2
+                    font-size: 38px
                     max-width: 480px
+                    max-width: 90%
                 .description
+                    margin:
+                        bottom: 48px
                     p
                         max-width: 480px
+                        max-width: 85%
             .headerDetails
                 max-width: 480px
                 display: flex
@@ -110,8 +121,11 @@
                 width: 65%
                 h5
                 h2
+                    font-size: 36px
                     max-width: 520px
                 .description
+                    margin:
+                        bottom: 44px
                     p
                         max-width: 520px
             .headerDetails
@@ -146,15 +160,17 @@
                 h2
                     font-size: 46px
                     line-height: 120%
-                    max-width: 80%
+                    max-width: 85%
                     margin:
                         bottom: 34px
+                        bottom: 36px
                 .description
                     margin: 
                         bottom: 0
                     p
                         font-size: 17px
                         line-height: 160%
+                        max-width: 80%
             .headerDetails
                 align-self: start
                 .item
