--- a/src/assets/sass/presentation.sass
+++ b/src/assets/sass/presentation.sass
@@ -41,6 +41,7 @@
         p
             max-width: 400px
             line-height: 150%
+            line-height: 155%
             font-size: 15px
             letter-spacing: -0.01em
             color: rgba($black, 0.8)
@@ -64,29 +65,34 @@
             background-position: center
             background-size: cover
             background-repeat: no-repeat
-            margin-bottom: 14px
+            margin-bottom: 15px
         figcaption
             font-size: 13px
-            color: rgba($black, 0.5)
+            color: rgba($black, 0.4)
             letter-spacing: -0.01em
             a
-                color: rgba($black, 0.7)
+                color: rgba($black, 0.6)
 
 @media (min-width: 660px)
     .hero
-        padding-top: 226px
+        padding-top: 246px
         .presentationTitle
             h5
+                font-size: 16px
                 margin:
                     bottom: 32px
             h1
                 font-size: 46px
-                max-width: 520px
+                line-height: 130%
+                max-width: 480px
+                margin-bottom: 62px
         .indexDescription
             p
             a
         .imagePresentation
+            margin-bottom: 76px
             .img
+                margin-bottom: 17px
             figcaption
                 a
 
@@ -96,11 +102,11 @@
         display: grid
         grid-template-columns: repeat(5, 1fr)
         grid-template-rows: repeat(1, 1fr)
-        grid-column-gap: 24px
+        grid-column-gap: 30px
         margin:
-            bottom: 110px
+            bottom: 118px
         &::after
-            height: 495px
+            height: 490px
         .presentationTitle
             grid-area: 1 / 1 / 2 / 4
             order: 1
@@ -109,12 +115,13 @@
             margin:
                 bottom: 0
             h5
+                font-size: 15px
                 margin:
                     bottom: 28px
             h1
                 font-size: 44px
-                max-width: 480px
-                margin-bottom: 92px
+                // max-width: 480px
+                margin-bottom: 82px
         .indexDescription
             grid-area: 2 / 1 / 3 / 4
             // align-items: start
@@ -122,6 +129,8 @@
             margin-bottom: 0
             p
                 max-width: 84%
+                margin-bottom: 20px
+                line-height: 160%
             a
         .imagePresentation
             grid-area: 1 / 4 / 3 / 6
@@ -130,7 +139,7 @@
             .img
                 // height: 92%
                 // height: 70%
-                height: 97%
+                height: 95%
                 // height: auto
                 // height: 500px
             figcaption
@@ -139,10 +148,10 @@
 @media (min-width: 1100px)
     .hero
         padding-top: 166px
-        grid-column-gap: 44px
+        grid-column-gap: 48px
         &::after
             height: 546px
-            height: 540px
+            height: 535px
         .presentationTitle
             padding:
                 top: 78px
@@ -153,8 +162,8 @@
             h1
                 font-size: 54px
                 line-height: 120%
-                max-width: 90%
-                margin-bottom: 104px
+                max-width: 85%
+                margin-bottom: 98px
         .indexDescription
             display: flex
             flex-wrap: wrap
