--- a/src/assets/sass/work.sass
+++ b/src/assets/sass/work.sass
@@ -46,7 +46,7 @@
                     max-width: 420px
                     margin:
                         bottom: 18px
-                    color: rgba($black, 0.8)
+                    color: rgba($black, 0.7)
         .headerDetails
             .item
                 margin-bottom: 26px
@@ -64,6 +64,7 @@
                     letter-spacing: -0.01em
                     margin-bottom: 0
                     line-height: 150%
+                    color: rgba($black, 0.7)
     .content
         padding:
             bottom: 45px
@@ -122,6 +123,7 @@
                 h5
                 h2
                     font-size: 36px
+                    // line-height: 135%
                     max-width: 520px
                 .description
                     margin:
@@ -130,6 +132,7 @@
                         max-width: 520px
             .headerDetails
                 width: 30%
+                align-self: start
                 // max-width: 480px
                 // display: flex
                 // flex-wrap: wrap
@@ -151,28 +154,29 @@
                 bottom: 160px
         .workHeader
             margin:
-                bottom: 116px
+                bottom: 100px
             .headerDescription
                 h5
                     font-size: 16px
                     margin:
-                        bottom: 34px
+                        bottom: 36px
                 h2
                     font-size: 46px
                     line-height: 120%
                     max-width: 85%
                     margin:
                         bottom: 34px
-                        bottom: 36px
+                        bottom: 38px
                 .description
                     margin: 
                         bottom: 0
                     p
                         font-size: 17px
+                        font-size: 17px
                         line-height: 160%
                         max-width: 80%
             .headerDetails
-                align-self: start
+                // align-self: start
                 .item
                     margin-bottom: 38px
                     h6
