--- a/src/assets/sass/work.sass
+++ b/src/assets/sass/work.sass
@@ -118,6 +118,8 @@
         .workHeader
             display: flex
             justify-content: space-between
+            margin:
+                bottom: 70px
             .headerDescription
                 width: 65%
                 h5
