--- a/src/assets/sass/profile.sass
+++ b/src/assets/sass/profile.sass
@@ -138,6 +138,7 @@
         .bio
             h5
             h1
+                font-size: 48px
             .description
                 p
         .profilePlayground
@@ -179,7 +180,7 @@
                 display: flex
                 justify-content: space-between
                 p
-                    width: 370px
+                    width: 380px
                     font-size: 18px
                     // line-height: 155%
                     margin-bottom: 0
