--- a/src/assets/sass/app.sass
+++ b/src/assets/sass/app.sass
@@ -1,5 +1,8 @@
 html, body
     font-family: 'Inter', sans-serif;
+    text-rendering: optimizeLegibility
+    -webkit-font-smoothing: antialiased
+    -moz-osx-font-smoothing: grayscale
     &.fixed
         overflow: hidden
 
